<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codepath.travelplanner.MainActivity" >
       
    <item
        android:id="@+id/miQuickRecFood"
        android:icon="@drawable/ic_quickfind_food"
        android:showAsAction="always"
        android:title="@string/food"/>
    <item
        android:id="@+id/miQuickRecTour"
        android:icon="@drawable/ic_quickfind_picture"
        android:showAsAction="always"
        android:title="@string/tourist"/>
    <item
        android:id="@+id/miQuickRecDrink"
        android:icon="@drawable/ic_quickfind_drink"
        android:showAsAction="always"
        android:title="@string/nightlife"/>
    <item
        android:id="@+id/miNewTrip"
        android:showAsAction="always"
        android:title="@string/plan_trip_menu_btn"/>
    <item
        android:id="@+id/miHelp"
        android:showAsAction="collapseActionView"
        android:icon="@drawable/ic_action_help"
        android:title="@string/help"/>
	<item
			android:id="@+id/miListView"
			android:showAsAction="collapseActionView"
			android:onClick="onListView"
			android:icon="@drawable/ic_sugg_list"
			android:title="@string/sugg_list"/>

</menu>
