<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="3dp">
				
	<ImageView
        android:id="@+id/ivImgLocation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/locationImgContentDescription" />
    
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/tvSuggPlaceName"
			android:textStyle="bold"
			android:layout_marginLeft="10dp"
			android:layout_toRightOf="@+id/ivImgLocation"
			android:layout_marginTop="8dp"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rating"
			android:id="@+id/tvRatingTitle"
			android:layout_marginRight="3dp"
			android:layout_marginLeft="10dp"
			android:layout_toRightOf="@+id/ivImgLocation"
			android:layout_below="@+id/tvSuggPlaceName"/>

	<ImageView
	    	android:contentDescription="@string/ratingContentDescription"
			android:layout_width="84dp"
			android:layout_height="17dp"
			android:id="@+id/ivRating"
			android:layout_toRightOf="@+id/tvRatingTitle"
			android:layout_below="@+id/tvSuggPlaceName"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/miles"
			android:id="@+id/tvDistType"
			android:layout_marginRight="10dp"
			android:layout_alignParentRight="true"
			android:layout_below="@+id/tvSuggPlaceName"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="0.2"
			android:id="@+id/tvDistNum"
			android:layout_toLeftOf="@+id/tvDistType"
			android:layout_below="@+id/tvSuggPlaceName"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dist"
			android:id="@+id/tvDistTitle"
			android:layout_marginRight="3dp"
			android:layout_toLeftOf="@+id/tvDistNum"
			android:layout_below="@+id/tvSuggPlaceName"/>
</RelativeLayout>