<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
     <ImageView
        android:contentDescription="@string/help"
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/icon_large_help" />

    <TextView
        android:id="@+id/tvFormHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/formHeaderText"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/tvFormSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFormHeader"
        android:layout_below="@+id/tvFormHeader"
        android:text="@string/formSubHeaderText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="52dp"
        android:text="@string/formNameText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etEmailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvEmail"
        android:layout_alignLeft="@+id/etNameField"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvName"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvName"
        android:layout_below="@+id/tvName"
        android:layout_marginTop="29dp"
        android:text="@string/formEmailText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEmail"
        android:layout_below="@+id/etEmailField"
        android:layout_marginTop="27dp"
        android:text="@string/formDetailsText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etDetailsField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDetails"
        android:layout_alignRight="@+id/etEmailField"
        android:layout_below="@+id/tvDetails"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:lines="2"
        android:inputType="textMultiLine" />


    <Button
        android:id="@+id/btnHelpSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDetailsField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/submit" />

</RelativeLayout>
